Fixed article image alignment in IE 11

--- a/wcfsetup/install/files/style/ui/article.scss
+++ b/wcfsetup/install/files/style/ui/article.scss
@@ -1,4 +1,7 @@
 .articleImage {
+	/* work-around for IE 11 to properly align the image if overflowing */
+	display: flex;
+	
 	.articleImageWrapper {
 		align-items: center;
 		display: flex;
